2004-02-21  Callum McKenzie  <callum@physics.otago.ac.nz>

	* src/menu.cpp: Removed warning about unused function by removing
	it with #if 0.

2004-02-20  William Jon McCann  <mccann@jhu.edu>

	* src/hand.cpp (bj_hand_finish_play): Only set the player to
	the next player if it is not NULL.  Fixes bug #134488.

	* src/events.cpp: Properly initialize variables.  Fixes bug #125523.
	(handle_slot_pressed): Remove debug print statement.

2004-02-14  Callum McKenzie  <callum@physics.otago.ac.nz>

	* src/game.cpp: 
	* src/dialog.cpp: 
	* src/card.cpp: Removed the has_separator call from the message
	dialogs.

2004-02-12  William Jon McCann  <mccann@jhu.edu>

	* data/Makefile.am: Don't install binary cache file.

2004-02-11  Callum McKenzie  <callum@physics.otago.ac.nz>

	* src/menu.cpp (help_about_callback): Add translator credits.

2004-02-04  William Jon McCann  <mccann@jhu.edu>

	* src/player.cpp (reset): Load new XML cache file.

	* src/game.cpp (bj_game_get_config_dir) 
	(bj_game_ensure_config_dir_exists): New functions
	(bj_game_eval_installed_file): Generate cache file if it
	is not found.  

2004-02-03  William Jon McCann  <mccann@jhu.edu>

	* src/player.cpp (LoadablePlayer, reset):
	Use and check return value.
	(saveHandXML, savePlayerHandCountXML, saveCountXML) 
	(saveValueSplitXML, saveResplitXML, saveOverallValuesXML) 
	(saveOverallValueXML, savePlayerHandsXML, saveXML) 
	(load_array_from_string, parse_hand, parse_hands) 
	(parse_hand_count, parse_value_split, parse_resplit) 
	(parse_overall_values, parse_overall_value, parse_document) 
	(loadXML): New functions to support saving and loading XML
	cache files.

	* src/hand.cpp (bj_hand_show_options) 
	(bj_hand_get_best_option_string, bj_hand_new5): Add some checks
	for NULL strategy.

2004-01-12  William Jon McCann  <mccann@jhu.edu>

	* src/card.cpp (bj_card_load_pixmaps): Added error checking and
	report dialog.

2003-12-28  William Jon McCann  <mccann@jhu.edu>

	* src/hand.cpp (bj_hand_show_options):