@@ -2,14 +2,12 @@ To be done before 2.5 code freeze (23 February 2004):
 
 General:
   - Update the version info for all docs.
-
+  - Check all games for command-line warnings.
 Aisleriot:
         - Stock pile click/drag/release = click bug.
 	- Are the Italian docs in the right place ?
 
 Blackjack:
-        - Occasional warning on the command line (race condition with
-          drawing code, may be related to 125523).
 
 Gataxx:
         - Crasher (132438) if info comes through.
@@ -53,6 +51,7 @@ gdk-card-image:
 For a possible 2.4.4:
  - Backport the gnometris level 10 crasher fix.
  - Find the gnect crasher (134296).
+ - There have also been blackjack fixes applied.
 
 --------------------------------------------------------------------------
 
